<resources>
    <string name="app_name">AgenciaInc</string>
    <string name="primer_dia_sprint">primer dia sprint</string>
    <string name="toyota">Toyota</string>
    <string name="modelo_w450">Modelo w450</string>
    <string name="ejemplodecatalogo">EjemploDeCatalogo</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="chasis">Chasis</string>
    <string name="a_o">Año</string>
    <string name="precio" translatable="false">Precio</string>
    <string name="fecha_de_ingreso">Fecha de ingreso</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nom">Prueba</string>
    <string name="registro_de_vehiculo">Registro de Vehiculo</string>
    <string name="Cliente">Cliente</string>
    <string name="_id">_id</string>
    <string name="nombre">Nombre</string>
    <string name="sexo">Sexo</string>
    <string name="telefono">Telefono</string>
    <string name="bienvenido_al_registro_de_cliente">BIENVENIDO AL REGISTRO DE CLIENTE</string>
    <string name="nombres">NOMBRES</string>
    <string name="pedro_paco">Pedro Paco</string>
    <string name="apellidos">APELLIDOS</string>
    <string name="pica_piedra">Pica Piedra</string>
    <string name="ci">CI</string>
    <string name="_8527693">8527693</string>
    <string name="fecha_nacimiento">FECHA NACIMIENTO</string>
    <string name="correo">CORREO</string>
    <string name="pedro_rocas_com">pedro@rocas.com</string>
    <string name="celular">CELULAR</string>
    <string name="genero">GENERO</string>
    <string name="masculino">MASCULINO</string>
    <string name="femenino">FEMENINO</string>
    <string name="_453213">453213</string>
    <string name="lfe231">LFE231</string>
    <string name="_2016">2016</string>
    <string name="registro_de_cliente">registro de cliente</string>
    <string name="tipo_vehiculo">Tipo Vehiculo</string>
    <string name="motocicleta">Motocicleta</string>
    <string name="caracteristicas">Caracteristicas</string>
    <string name="este_vehiculo_te_permite">Este Vehiculo te permite…</string>
    <string name="catalgo_vehiculos">Catalgo Vehiculos</string>
    <string name="automovil">Automovil</string>
    <string name="camioneta">Camioneta</string>
    <string name="jepp">Jeep</string>
    <string name="minibus">Minibus</string>
    <string name="motocicleta_name">Motocicleta</string>
    <string name="trailer">Trailer</string>
    <string name="vagoneta">Vagoneta</string>
    <string name="car">Car</string>
    <string name="a_adir_imagen_de_galeria">Añadir Imagen de Galeria</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="imagen">Imagen</string>
    <string name="registro_contrato">Registro contrato</string>
    <string name="nombre_empleador">Nombre Empleador</string>
    <string name="_22_06_1986">22 06 1986</string>
    <string name="direccion">Direccion</string>
    <string name="calle_fake_123">Calle Fake 123</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="bolivia">Bolivia</string>
    <string name="vendedor">Vendedor</string>
    <string name="salario">Salario</string>
    <string name="carga">Carga</string>
    <string name="registro_cont">Registro Contrato</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="pais">Pais</string>
    <string name="registro_mecanico">Registro Mecanico</string>
    <string name="potencia">Potencia</string>
    <string name="_125_hp">125 hp</string>
    <string name="transaccion">TRANSACCION</string>
    <string name="comprador">Comprador</string>
    <string name="jose_jose">Jose jose</string>
    <string name="descuento">Descuento</string>
    <string name="precio_total">precio total</string>
    <string name="numero_de_importacion">numero de importacion</string>
    <string name="caudal">caudal</string>
    <string name="cochabamba">Cochabamba</string>
    <string name="ciudad">Ciudad</string>
    <string name="registro_transaccion">Registro transaccion</string>
    <string name="registro_cliente">Registro Cliente</string>
    <string name="fecha">Fecha</string>
    <string name="diagnostico">Diagnostico</string>
    <string name="rueda">Rueda</string>
    <string name="registro_diagnostico_mecanico">Registro diagnostico mecanico</string>
    <string name="comprar">COMPRAR</string>
    <string name="aceptar">Aceptar</string>
    <string name="modeloValidador">Nombre de modelo invalido.</string>

    <string-array name="tipe_car">
        <item>@string/automovil</item>
        <item>@string/vagoneta</item>
        <item>@string/jepp</item>
        <item>@string/camioneta</item>
        <item>@string/minibus</item>
        <item>@string/trailer</item>
        <item>@string/motocicleta_name</item>
    </string-array>
</resources>
