<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/registro_cont"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_empleador" />

        <EditText
            android:id="@+id/nameEmployed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pedro_paco" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/nombre_contrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pedro_paco" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos" />

        <EditText
            android:id="@+id/apellido_contrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pica_piedra" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci" />

        <EditText
            android:id="@+id/ci_contrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_453213" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento" />

        <EditText
            android:id="@+id/nacimiento_contrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_22_06_1986" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/correo_contrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pedro_rocas_com" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion" />

        <EditText
            android:id="@+id/direccion_contrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calle_fake_123" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento" />

        <EditText
            android:id="@+id/fechaIni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_22_06_1986" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_final" />

        <EditText
            android:id="@+id/fechaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_22_06_1986" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_453213" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pais" />

        <EditText
            android:id="@+id/pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bolivia" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carga" />

        <EditText
            android:id="@+id/vendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vendedor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salario" />

        <EditText
            android:id="@+id/salario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_453213" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/Cancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/registrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/registrar"
                android:textColor="@android:color/white"
                tools:targetApi="lollipop" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>