<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.gunnar.agenciainc.Mains.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/registro_de_vehiculo"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/modelo"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modelo_w450" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/marca"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toyota" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/chasis"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/chasis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lfe231" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/a_o"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/anio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_2016"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/precio"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_453213"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/tipo_vehiculo"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/tipe_car"
            android:scrollbars="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/caracteristicas"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/carac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/este_vehiculo_te_permite"
            android:inputType="number" />

        <Button
            android:id="@+id/date"
            style="?android:buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_ingreso" />

        <TextView
            android:id="@+id/dateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/imagen"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/Cancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/registrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/registrar"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>