<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gunnar.agenciainc.Mains.MainActivity">

    <Button
        android:id="@+id/registroV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_vehiculo" />

    <Button
        android:id="@+id/registroCl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_cliente" />

    <Button
        android:id="@+id/catalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalgo_vehiculos" />

    <Button
        android:text="DETALLE VEHICULO"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnDetalleV" />

</LinearLayout>
